deploy: cbc2dc3f35cff041b0ccea7539cc94ee84c2328c

--- a/modules.html
+++ b/modules.html
@@ -91,6 +91,7 @@
 								<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#tfunction" class="tsd-kind-icon">TFunction</a></li>
 								<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#tproptype" class="tsd-kind-icon">TProp<wbr>Type</a></li>
 								<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#ttypecallback" class="tsd-kind-icon">TType<wbr>Callback</a></li>
+								<li class="tsd-kind-type-alias"><a href="modules.html#twindow" class="tsd-kind-icon">TWindow</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -123,7 +124,7 @@
 					<div class="tsd-signature tsd-kind-icon">TArray<wbr>Filter&lt;Item&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Item</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/arrays.ts#L11">types/arrays.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/arrays.ts#L11">types/arrays.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -173,7 +174,7 @@
 					<div class="tsd-signature tsd-kind-icon">TCallback&lt;Tuple, Return&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tfunction" class="tsd-signature-type" data-tsd-kind="Type alias">TFunction</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Tuple</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">Return</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><a href="modules.html#temptycallback" class="tsd-signature-type" data-tsd-kind="Type alias">TEmptyCallback</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/functions.ts#L10">types/functions.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/functions.ts#L10">types/functions.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -197,7 +198,7 @@
 					<div class="tsd-signature tsd-kind-icon">TDOMElement<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Document</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Window</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/dom.ts#L3">types/dom.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/dom.ts#L5">types/dom.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -207,7 +208,7 @@
 					<div class="tsd-signature tsd-kind-icon">TDOMEvent<wbr>Handler&lt;EventType&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tfunction" class="tsd-signature-type" data-tsd-kind="Type alias">TFunction</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">EventType</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/dom.ts#L15">types/dom.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/dom.ts#L17">types/dom.ts:17</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -236,7 +237,7 @@
 					<div class="tsd-signature tsd-kind-icon">TEmpty<wbr>Callback<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/functions.ts#L7">types/functions.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/functions.ts#L7">types/functions.ts:7</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -266,7 +267,7 @@
 					<div class="tsd-signature tsd-kind-icon">TFunction&lt;Tuple, Return&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">...</span>args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Tuple</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Return</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/functions.ts#L2">types/functions.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/functions.ts#L2">types/functions.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -311,7 +312,7 @@
 					<div class="tsd-signature tsd-kind-icon">TProp<wbr>Type&lt;TObj, TProp&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TObj</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">TProp</span><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/utils.ts#L2">types/utils.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/utils.ts#L2">types/utils.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -335,7 +336,7 @@
 					<div class="tsd-signature tsd-kind-icon">TType<wbr>Callback&lt;Return, Options&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">Options</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Return</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/functions.ts#L15">types/functions.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/functions.ts#L15">types/functions.ts:15</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -374,6 +375,16 @@
 						</ul>
 					</div>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias">
+					<a name="twindow" class="tsd-anchor"></a>
+					<h3>TWindow</h3>
+					<div class="tsd-signature tsd-kind-icon">TWindow<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">typeof </span><span class="tsd-signature-type">window</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/dom.ts#L3">types/dom.ts:3</a></li>
+						</ul>
+					</aside>
+				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Variables</h2>
@@ -383,7 +394,7 @@
 					<div class="tsd-signature tsd-kind-icon">APP_<wbr>URL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/browser.ts#L23">constants/browser.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/browser.ts#L23">constants/browser.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -399,7 +410,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>PAGE_<wbr>SIZE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">25</span><span class="tsd-signature-symbol"> = 25</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/default-values.ts#L1">constants/default-values.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/default-values.ts#L1">constants/default-values.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -409,7 +420,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>WAIT_<wbr>MILLISECONDS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">300</span><span class="tsd-signature-symbol"> = 300</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/default-values.ts#L3">constants/default-values.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/default-values.ts#L3">constants/default-values.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -419,7 +430,7 @@
 					<div class="tsd-signature tsd-kind-icon">FALSY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/expressions.ts#L23">constants/expressions.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/expressions.ts#L23">constants/expressions.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -441,7 +452,7 @@
 					<div class="tsd-signature tsd-kind-icon">TRUTHY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/expressions.ts#L11">constants/expressions.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/expressions.ts#L11">constants/expressions.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -463,7 +474,7 @@
 					<div class="tsd-signature tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/browser.ts#L11">constants/browser.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/browser.ts#L11">constants/browser.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -478,7 +489,7 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Browser<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/browser.ts#L6">constants/browser.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/browser.ts#L6">constants/browser.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -501,7 +512,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/utils.ts#L16">constants/utils.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/utils.ts#L16">constants/utils.ts:16</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -523,7 +534,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/utils.ts#L13">constants/utils.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/utils.ts#L13">constants/utils.ts:13</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -612,6 +623,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="modules.html#ttypecallback" class="tsd-kind-icon">TType<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="modules.html#twindow" class="tsd-kind-icon">TWindow</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="modules.html#app_url" class="tsd-kind-icon">APP_<wbr>URL</a>
