--- a/enums/jstypeof.html
+++ b/enums/jstypeof.html
@@ -90,7 +90,7 @@
 					<div class="tsd-signature tsd-kind-icon">FUNCTION<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;function&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/js-types.ts#L3">enums/js-types.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/js-types.ts#L3">enums/js-types.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">NUMBER<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;number&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/js-types.ts#L6">enums/js-types.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/js-types.ts#L6">enums/js-types.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">OBJECT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;object&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/js-types.ts#L4">enums/js-types.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/js-types.ts#L4">enums/js-types.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -120,7 +120,7 @@
 					<div class="tsd-signature tsd-kind-icon">STRING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;string&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/js-types.ts#L5">enums/js-types.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/js-types.ts#L5">enums/js-types.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -130,7 +130,7 @@
 					<div class="tsd-signature tsd-kind-icon">UNDEFINED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;undefined&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/js-types.ts#L2">enums/js-types.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/js-types.ts#L2">enums/js-types.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -217,6 +217,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="../modules.html#ttypecallback" class="tsd-kind-icon">TType<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#twindow" class="tsd-kind-icon">TWindow</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#app_url" class="tsd-kind-icon">APP_<wbr>URL</a>
