--- a/enums/requestcontenttypes.html
+++ b/enums/requestcontenttypes.html
@@ -95,7 +95,7 @@
 					<div class="tsd-signature tsd-kind-icon">FORM<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/http-apis.ts#L23">enums/http-apis.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/http-apis.ts#L23">enums/http-apis.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -105,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">IMAGE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;image/jpg, image/png&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/http-apis.ts#L21">enums/http-apis.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/http-apis.ts#L21">enums/http-apis.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">JSON<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;application/json&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/http-apis.ts#L22">enums/http-apis.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/http-apis.ts#L22">enums/http-apis.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -196,6 +196,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="../modules.html#ttypecallback" class="tsd-kind-icon">TType<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#twindow" class="tsd-kind-icon">TWindow</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#app_url" class="tsd-kind-icon">APP_<wbr>URL</a>
