--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="modules.html#ttypecallback" class="tsd-kind-icon">TType<wbr>Callback</a>
 					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="modules.html#twindow" class="tsd-kind-icon">TWindow</a>
+					</li>
 					<li class=" tsd-kind-variable">
 						<a href="modules.html#app_url" class="tsd-kind-icon">APP_<wbr>URL</a>
 					</li>
