--- a/interfaces/isize.html
+++ b/interfaces/isize.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">height<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/interfaces/index.ts#L4">interfaces/index.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/interfaces/index.ts#L4">interfaces/index.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">width<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/interfaces/index.ts#L3">interfaces/index.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/interfaces/index.ts#L3">interfaces/index.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -190,6 +190,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="../modules.html#ttypecallback" class="tsd-kind-icon">TType<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#twindow" class="tsd-kind-icon">TWindow</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#app_url" class="tsd-kind-icon">APP_<wbr>URL</a>
