deploy: 35e3b1e1d955714c324ab18610e509267bb96a53

--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
 						<a href="modules.html#tfunction" class="tsd-kind-icon">TFunction</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
+						<a href="modules.html#tjsobject" class="tsd-kind-icon">TJSObject</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
+						<a href="modules.html#tjsvalue" class="tsd-kind-icon">TJSValue</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="modules.html#tproptype" class="tsd-kind-icon">TProp<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
