--- a/enums/requestprotocol.html
+++ b/enums/requestprotocol.html
@@ -87,7 +87,7 @@
 					<div class="tsd-signature tsd-kind-icon">HTTP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;http&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/http-apis.ts#L2">enums/http-apis.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/enums/http-apis.ts#L2">enums/http-apis.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -97,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">HTTPS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;https&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/enums/http-apis.ts#L3">enums/http-apis.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/enums/http-apis.ts#L3">enums/http-apis.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -169,6 +169,12 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="../modules.html#tfunction" class="tsd-kind-icon">TFunction</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
+						<a href="../modules.html#tjsobject" class="tsd-kind-icon">TJSObject</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
+						<a href="../modules.html#tjsvalue" class="tsd-kind-icon">TJSValue</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="../modules.html#tproptype" class="tsd-kind-icon">TProp<wbr>Type</a>
