--- a/modules.html
+++ b/modules.html
@@ -89,6 +89,8 @@
 								<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#tdomeventhandler" class="tsd-kind-icon">TDOMEvent<wbr>Handler</a></li>
 								<li class="tsd-kind-type-alias"><a href="modules.html#temptycallback" class="tsd-kind-icon">TEmpty<wbr>Callback</a></li>
 								<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#tfunction" class="tsd-kind-icon">TFunction</a></li>
+								<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#tjsobject" class="tsd-kind-icon">TJSObject</a></li>
+								<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#tjsvalue" class="tsd-kind-icon">TJSValue</a></li>
 								<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#tproptype" class="tsd-kind-icon">TProp<wbr>Type</a></li>
 								<li class="tsd-kind-type-alias tsd-has-type-parameter"><a href="modules.html#ttypecallback" class="tsd-kind-icon">TType<wbr>Callback</a></li>
 								<li class="tsd-kind-type-alias"><a href="modules.html#twindow" class="tsd-kind-icon">TWindow</a></li>
@@ -124,7 +126,7 @@
 					<div class="tsd-signature tsd-kind-icon">TArray<wbr>Filter&lt;Item&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Item</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/arrays.ts#L11">types/arrays.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/arrays.ts#L11">types/arrays.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -174,7 +176,7 @@
 					<div class="tsd-signature tsd-kind-icon">TCallback&lt;Tuple, Return&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tfunction" class="tsd-signature-type" data-tsd-kind="Type alias">TFunction</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Tuple</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">Return</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><a href="modules.html#temptycallback" class="tsd-signature-type" data-tsd-kind="Type alias">TEmptyCallback</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/functions.ts#L10">types/functions.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/functions.ts#L10">types/functions.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -198,7 +200,7 @@
 					<div class="tsd-signature tsd-kind-icon">TDOMElement<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Document</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Window</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/dom.ts#L5">types/dom.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/dom.ts#L5">types/dom.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -208,7 +210,7 @@
 					<div class="tsd-signature tsd-kind-icon">TDOMEvent<wbr>Handler&lt;EventType&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tfunction" class="tsd-signature-type" data-tsd-kind="Type alias">TFunction</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">EventType</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/dom.ts#L17">types/dom.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/dom.ts#L17">types/dom.ts:17</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -237,7 +239,7 @@
 					<div class="tsd-signature tsd-kind-icon">TEmpty<wbr>Callback<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/functions.ts#L7">types/functions.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/functions.ts#L7">types/functions.ts:7</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -267,7 +269,7 @@
 					<div class="tsd-signature tsd-kind-icon">TFunction&lt;Tuple, Return&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">...</span>args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Tuple</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Return</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/functions.ts#L2">types/functions.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/functions.ts#L2">types/functions.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -307,12 +309,54 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-has-type-parameter">
+					<a name="tjsobject" class="tsd-anchor"></a>
+					<h3>TJSObject</h3>
+					<div class="tsd-signature tsd-kind-icon">TJSObject&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> &amp; </span><span class="tsd-signature-type">Object</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/utils.ts#L5">types/utils.ts:5</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>JavaScript Object type</p>
+						</div>
+					</div>
+					<h4 class="tsd-type-parameters-title">Type parameters</h4>
+					<ul class="tsd-type-parameters">
+						<li>
+							<h4>T = <span class="tsd-signature-type">unknown</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-has-type-parameter">
+					<a name="tjsvalue" class="tsd-anchor"></a>
+					<h3>TJSValue</h3>
+					<div class="tsd-signature tsd-kind-icon">TJSValue&lt;T&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tjsobject" class="tsd-signature-type" data-tsd-kind="Type alias">TJSObject</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">unknown</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/utils.ts#L8">types/utils.ts:8</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>JavaScript value that could be an object or any other js value</p>
+						</div>
+					</div>
+					<h4 class="tsd-type-parameters-title">Type parameters</h4>
+					<ul class="tsd-type-parameters">
+						<li>
+							<h4>T = <span class="tsd-signature-type">unknown</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-has-type-parameter">
 					<a name="tproptype" class="tsd-anchor"></a>
 					<h3>TProp<wbr>Type</h3>
 					<div class="tsd-signature tsd-kind-icon">TProp<wbr>Type&lt;TObj, TProp&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TObj</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">TProp</span><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/utils.ts#L2">types/utils.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/utils.ts#L2">types/utils.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -336,7 +380,7 @@
 					<div class="tsd-signature tsd-kind-icon">TType<wbr>Callback&lt;Return, Options&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">Options</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Return</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/functions.ts#L15">types/functions.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/functions.ts#L15">types/functions.ts:15</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -381,7 +425,7 @@
 					<div class="tsd-signature tsd-kind-icon">TWindow<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">typeof </span><span class="tsd-signature-type">window</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/types/dom.ts#L3">types/dom.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/types/dom.ts#L3">types/dom.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -394,7 +438,7 @@
 					<div class="tsd-signature tsd-kind-icon">APP_<wbr>URL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/browser.ts#L23">constants/browser.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/constants/browser.ts#L23">constants/browser.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -410,7 +454,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>PAGE_<wbr>SIZE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">25</span><span class="tsd-signature-symbol"> = 25</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/default-values.ts#L1">constants/default-values.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/constants/default-values.ts#L1">constants/default-values.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -420,7 +464,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>WAIT_<wbr>MILLISECONDS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">300</span><span class="tsd-signature-symbol"> = 300</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/default-values.ts#L3">constants/default-values.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/constants/default-values.ts#L3">constants/default-values.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -430,7 +474,7 @@
 					<div class="tsd-signature tsd-kind-icon">FALSY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/expressions.ts#L23">constants/expressions.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/constants/expressions.ts#L23">constants/expressions.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -452,7 +496,7 @@
 					<div class="tsd-signature tsd-kind-icon">TRUTHY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/expressions.ts#L11">constants/expressions.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/constants/expressions.ts#L11">constants/expressions.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -474,7 +518,7 @@
 					<div class="tsd-signature tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/browser.ts#L11">constants/browser.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/constants/browser.ts#L11">constants/browser.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -489,7 +533,7 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Browser<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/browser.ts#L6">constants/browser.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/constants/browser.ts#L6">constants/browser.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -512,7 +556,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/utils.ts#L16">constants/utils.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/constants/utils.ts#L16">constants/utils.ts:16</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -534,7 +578,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/cbc2dc3/src/constants/utils.ts#L13">constants/utils.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/35e3b1e/src/constants/utils.ts#L13">constants/utils.ts:13</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -617,6 +661,12 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="modules.html#tfunction" class="tsd-kind-icon">TFunction</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
+						<a href="modules.html#tjsobject" class="tsd-kind-icon">TJSObject</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
+						<a href="modules.html#tjsvalue" class="tsd-kind-icon">TJSValue</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="modules.html#tproptype" class="tsd-kind-icon">TProp<wbr>Type</a>
