deploy: bc4640202620c444144746ad839c5fe137d53bf6

--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
 				<a href="#examples" id="examples" style="color: inherit; text-decoration: none;">
 					<h2>Examples</h2>
 				</a>
+				<p><a href="https://codesandbox.io/s/hello-ts-definitions-common-lib-pjrql?file=/src/index.ts">codesandbox example</a></p>
 				<a href="#tfunction" id="tfunction" style="color: inherit; text-decoration: none;">
 					<h3>TFunction</h3>
 				</a>
-				<pre><code><span style="color: #AF00DB">import</span><span style="color: #000000"> { </span><span style="color: #001080">TFunction</span><span style="color: #000000"> } </span><span style="color: #AF00DB">from</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;@erkobridee/ts-definitions-common&#039;</span><span style="color: #000000">;</span>
+				<pre><code class="language-javascript"><span style="color: #AF00DB">import</span><span style="color: #000000"> { </span><span style="color: #001080">TFunction</span><span style="color: #000000"> } </span><span style="color: #AF00DB">from</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;@erkobridee/ts-definitions-common&#039;</span><span style="color: #000000">;</span>
 
 <span style="color: #008000">// or</span>
 
@@ -92,13 +93,11 @@
 				<a href="#tdomeventhandler" id="tdomeventhandler" style="color: inherit; text-decoration: none;">
 					<h3>TDOMEventHandler</h3>
 				</a>
-				<pre><code><span style="color: #AF00DB">import</span><span style="color: #000000"> { </span><span style="color: #001080">TDOMEventHandler</span><span style="color: #000000"> } </span><span style="color: #AF00DB">from</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;@erkobridee/ts-definitions-common&#039;</span><span style="color: #000000">;</span>
+				<pre><code class="language-javascript"><span style="color: #AF00DB">import</span><span style="color: #000000"> { </span><span style="color: #001080">TDOMEventHandler</span><span style="color: #000000"> } </span><span style="color: #AF00DB">from</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;@erkobridee/ts-definitions-common&#039;</span><span style="color: #000000">;</span>
 
 <span style="color: #008000">// or</span>
 
 <span style="color: #AF00DB">import</span><span style="color: #000000"> { </span><span style="color: #001080">TDOMEventHandler</span><span style="color: #000000"> } </span><span style="color: #AF00DB">from</span><span style="color: #000000"> </span><span style="color: #A31515">&#039;@erkobridee/ts-definitions-common/types/dom&#039;</span><span style="color: #000000">;</span>
-
-
 
 <span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #795E26">clickHandler</span><span style="color: #000000">: </span><span style="color: #267F99">TDOMEventHandler</span><span style="color: #000000"> = (</span><span style="color: #001080">event</span><span style="color: #000000">) </span><span style="color: #0000FF">=&gt;</span><span style="color: #000000"> </span><span style="color: #001080">console</span><span style="color: #000000">.</span><span style="color: #795E26">log</span><span style="color: #000000">(</span><span style="color: #001080">event</span><span style="color: #000000">);</span>
 
