deploy: e55d3cc115a68a3b155abde339dcc4952b897664

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 	<div class="row">
 		<div class="col-8 col-content">
 			<div class="tsd-panel tsd-typography">
+				<p><a href="https://github.com/erkobridee/ts-definitions-common/"><img src="https://github.com/erkobridee/ts-definitions-common/workflows/CD%20-%20publish%20docs%20and%20npm%20package/badge.svg" alt="Actions Status"></a></p>
 				<a href="#typescript-common-definitions" id="typescript-common-definitions" style="color: inherit; text-decoration: none;">
 					<h1>typescript common definitions</h1>
 				</a>
